# PyKraken

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release-pypi.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/css/: custom.css
docs/reference/: mouse.rst
docs/showcase/: springjam25.rst
include/: Camera.hpp  Circle.hpp  Color.hpp  Constants.hpp  Draw.hpp  Ease.hpp  Event.hpp  Gamepad.hpp  Input.hpp  Key.hpp  Line.hpp  Mask.hpp  Math.hpp  Mixer.hpp  Mouse.hpp  PixelArray.hpp  Polygon.hpp  Rect.hpp  Renderer.hpp  Surface.hpp  Texture.hpp  Time.hpp  Transform.hpp  Window.hpp  _casts.hpp  _globals.hpp
include/gfx/: SDL3_gfxPrimitives.h  SDL3_gfxPrimitives_font.h
src/: _core.cpp  _globals.cpp  camera.cpp  circle.cpp  color.cpp  constants.cpp  core.cpp  draw.cpp  ease.cpp  event.cpp  gamepad.cpp  input.cpp  key.cpp  line.cpp  mask.cpp  math.cpp  mixer.cpp  mouse.cpp  pixel_array.cpp  polygon.cpp  rect.cpp  renderer.cpp  surface.cpp  texture.cpp  time.cpp  transform.cpp  window.cpp
src/gfx/: SDL3_gfxPrimitives.cpp  SDL3_rotozoom.cpp
src/pykraken/: __init__.py  __init__.pyi  event.pyi  time.pyi  window.pyi
src/pykraken/_core/: __init__.pyi  color.pyi  ease.pyi  event.pyi  gamepad.pyi  input.pyi  key.pyi  line.pyi  math.pyi  mouse.pyi  rect.pyi  time.pyi  window.pyi
