[build-system]
requires = ["scikit-build-core", "pybind11", "cibuildwheel"]
build-backend = "scikit_build_core.build"

[project]
name = "pykraken"
version = "0.1.0"
description = "Python bindings for Kraken Engine"
readme = "README.md"
authors = [
  { name = "Derrick Martinez", email = "me@email.com" },
]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
