[build-system]
requires = ["scikit-build-core", "pybind11", "cibuildwheel"]
build-backend = "scikit_build_core.build"

[project]
name = "kraken-engine"
version = "0.0.1"
authors = [
  { name = "Derrick Martinez" },
]
description = "Python bindings for Kraken Engine"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Microsoft :: Windows",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/Kraken-Engine/PyKraken"
Issues = "https://github.com/Kraken-Engine/PyKraken/issues"

[tool.scikit-build]
wheel.packages = ["src/pykraken"]
